<resources>
    <string name="app_name">Runnimal</string>
    <string name="back">back</string>
    <string name="Login">Login</string>
    <string name="title_activity_god">GodActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_friends_title">Friends</string>
    <string name="menu_ranking_title">Ranking</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_bottom_trainings_title">Trainings</string>
    <string name="title_profile">Profile</string>
    <string name="menu_bottom_map_title">Map</string>
    <string name="menu_bottom_pets_title">Pets</string>
    <string name="menu_bottom_challenges_title">Challenges</string>
    <string name="Password">Password</string>
    <string name="Forgot_password">Forgot Password</string>
    <string name="Create_Account">Create Account</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">Or</string>
    <string name="text_pets_title">My pets</string>
    <string name="button_pets_add">Add</string>
    <string name="Name">Name</string>
    <string name="format_email">user@example.com</string>
    <string name="alias">Alias</string>
    <string name="breed">Breed</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="detail_training_steps">Steps</string>
    <string name="UserProfile">User Profile</string>
    <string name="Modify">Modify</string>
    <string name="Save">Save</string>
    <string name="PetsProfile">Pets profile</string>
    <string name="birthdate">Birth year</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="cancel">Cancel</string>
    <string name="walks_start">Start walk</string>
    <string name="location_error_title">Enable location</string>
    <string name="location_error_descr">Your locations settings is set to \'Off\'. \nPlease enable location to use this feature</string>
    <string name="gps_settings">Location settings</string>

    <string-array name="size_array">
        <item>Small</item>
        <item>Big</item>
        <item>Medium</item>
    </string-array>

    <string-array name="array_language">
        <item>EN</item>
        <item>ES</item>
        <item>CA</item>
    </string-array>
    <string name="size_prompt">Select a size</string>
    <string name="owner">Owner</string>
    <string name="Search">Search</string>
    <string name="Reject">Reject</string>
    <string name="Accept">Accept</string>
    <string name="Friends">Friends</string>
    <string name="request_title">Request</string>
    <string name="settings_lang_title">Language</string>
    <string name="Delete">Delete</string>
    <string name="Completed">Completed</string>
    <string name="World">World</string>
    <string name="Local">Local</string>
    <string name="Ranking">Ranking</string>

    <string name="permission_rationale_location">Access to the location service is required to be able to have all the functionalities available, which shows your current location on the map and track your walks.</string>
    <string name="location_permission_denied">This sample requires location permission to show your current location on the map and track your walks . Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Runnimal\'.</string>
    <string name="permission_required_toast">Location permission is required for use this APP.</string>
    <string name="email">email</string>

    <string name="point_type_filter_all">All</string>
    <string name="point_type_filter_park">Park</string>
    <string name="point_type_filter_pipican">Pipican</string>
    <string name="point_type_filter_other">Other</string>
    <string name="logout">Logout</string>

    <string name="walks_title">Walks</string>
    <string name="map_walk_start">Start walk</string>
    <string name="map_walk_end">End walk</string>
    <string name="Stats">Statistics</string>
    <string name="Time">Time</string>
    <string name="Distance">Distance</string>
    <string name="Walks">Walks</string>
    <string name="fill_all_the_camps">You have to fill all the text camps</string>
    <string name="missing_params">Missing parameters</string>
    <string name="standardError_Msg">Ooops! Something went wrong…</string>
    <string name="isNowOwner">is now an owner</string>
    <string name="additional_owner_explanation">Puedes compartir tu mascota con otros usuarios añadiendoslos como dueños adicionales!</string>
    <string name="email_example">xxx@yyyy.zzz</string>
</resources>
